# prefect-oop-example

./: .gitignore  Dockerfile  README.md  config.yaml  etl.py  pyproject.toml  subflows.py
tests/: conftest.py  test_subflows.py
